<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_personaje"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="@color/card"
    card_view:cardCornerRadius="28dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp"
    >

        <RelativeLayout
            android:layout_width="365dp"
            android:layout_height="160dp"
            android:padding="16dp">

                <ImageView
                    android:id="@+id/item_img"
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" />

                <TextView
                    android:id="@+id/actor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="43dp"
                    android:layout_marginBottom="71dp"
                    android:layout_toEndOf="@+id/item_img"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/actor_e"
                    android:textColor="@color/text1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="31dp"
                    android:layout_marginTop="18dp"
                    android:layout_toEndOf="@id/item_img"
                    android:layout_toRightOf="@id/item_img"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textColor="@color/text1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@id/item_img"
                    android:layout_toRightOf="@id/item_img"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/nombre_e"
                    android:textColor="@color/text1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_actor"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="60dp"
                    android:layout_toEndOf="@+id/item_img"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textColor="@color/text1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="88dp"
                    android:layout_toEndOf="@+id/item_img"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/house_e"
                    android:textColor="@color/text1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_house"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="108dp"
                    android:layout_toEndOf="@id/item_img"
                    android:layout_toRightOf="@id/item_img"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textColor="@color/text1"
                    android:textSize="20sp"
                    android:textStyle="bold" />


        </RelativeLayout>

</androidx.cardview.widget.CardView>